--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shipping-abf",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "ABF Freight Shipping API bindings for Node.JS",
   "keywords": [
     "shipping",
@@ -34,9 +34,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "extend": "latest",
+    "extend": "^1.2.1",
     "q": "^1.1.2",
     "request": "^2.51.0",
-    "xml2json": "latest"
+    "xml2js": "^0.4.10"
   }
 }
